update in LibIAPWS06
addition of the parametrized Gibbs free energy
and its derivatives

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,12 @@ target_sources(IAPWS95 PUBLIC ${PROJECT_SOURCE_DIR}/src/BaseIAPWS.cpp
                               ${PROJECT_SOURCE_DIR}/src/InterCSpline.cpp)
 target_include_directories(IAPWS95 PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
+project(IAPWS06)
+add_library(IAPWS06 STATIC)
+target_sources(IAPWS06 PUBLIC ${PROJECT_SOURCE_DIR}/src/BaseIAPWS.cpp
+                              ${PROJECT_SOURCE_DIR}/src/LibIAPWS06.cpp)
+target_include_directories(IAPWS06 PUBLIC "${PROJECT_SOURCE_DIR}/include")
+
 project(make_tab_IAPWS95)
 add_executable(make_tab_IAPWS95 ${PROJECT_SOURCE_DIR}/src/make_tab_IAPWS95.cpp)
 set_target_properties(make_tab_IAPWS95 PROPERTIES OUTPUT_NAME "make_tab_IAPWS95.exec")
@@ -30,3 +36,9 @@ add_executable(test_IAPWS95 ${PROJECT_SOURCE_DIR}/src/test_IAPWS95.cpp)
 set_target_properties(test_IAPWS95 PROPERTIES OUTPUT_NAME "test_IAPWS95.exec")
 target_link_libraries(test_IAPWS95 PUBLIC IAPWS95)
 target_include_directories(test_IAPWS95 PUBLIC "${PROJECT_SOURCE_DIR}/include")
+
+project(test_IAPWS06)
+add_executable(test_IAPWS06 ${PROJECT_SOURCE_DIR}/src/test_IAPWS06.cpp)
+set_target_properties(test_IAPWS06 PROPERTIES OUTPUT_NAME "test_IAPWS06.exec")
+target_link_libraries(test_IAPWS06 PUBLIC IAPWS06)
+target_include_directories(test_IAPWS06 PUBLIC "${PROJECT_SOURCE_DIR}/include")
